Thu Oct 28 11:36:01 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * dance/Version.h:
          Fixed incorrect DANCE spelling generated by make_release.py.

Wed Oct 27 17:44:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/LocalityManager/ExplicitExec/run_test.pl:
        * tests/LocalityManager/ProcessName/run_test.pl:
        * tests/LocalityManager/SpawnMultiple/run_test.pl:
        * tests/LocalityManager/SpawnOne/run_test.pl:
          Fixed typo

        * dance/LocalityManager/Scheduler/Events/Action_Base.cpp:
          Layout changes

        * tools/Artifact_Installation/Artifact_Installation_exec.cpp:
          Initialise pointer with 0

Wed Oct 27 10:38:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ChangeLog:
        * NEWS:
          Updated for next release

Wed Oct 27 12:01:05 CEST 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 0.8.3 released.

Mon Oct 18 18:39:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dance/DAnCE_Properties.idl:
          Fixed typo in property names

Mon Oct 18 12:59:29 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
        * dance/LocalityManager/Daemon/Locality_Manager_Task.cpp:
          Some memory leak fixes, but we still have a lot to resolve

        * dance/NodeManager/NodeManager_Impl.cpp:
        * dance/NodeManager/Node_Manager_Module.cpp:
          Layout

        * etc/DAnCE.doxygen:
          Changed directories

Sat Oct 16 13:43:55 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/LocalityManager/Handler/Locality_Manager_Handler_Impl.cpp:

          Compile fix.

Fri Oct 15 15:50:08 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/LocalityManager/Handler/Locality_Manager_Handler_Impl.cpp:

          Get the ORB from the Plugin_Manager singleton instead of internal TAO